# vulnhunter-ai-work

./: .env.example  .gitignore  .graphifyignore  .playwright-cli-config.json  .playwright-validate.cjs  .ruff.toml  AGENTS.md  CHANGELOG.md  README.md  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  first-run.sh  install-nuclei.sh  post-create.sh  start-phone-lab.sh  start-preview.sh  start-vulnhunter.sh
.github/: dependabot.yml
docs/: BENCHMARK.md  DATA_QUALITY.md  ML_PIPELINE.md  MODEL_SELECTION.md
knowledge/: README.md  index.md  ingest-log.md  source-register.md
scripts/: _apply_ui_audit_repairs.py  _tmp_apply_conversation_core.py  _tmp_apply_url_target_intake.py  _tmp_run_conversation_core.py  apply_milestone32_contract_cleanup.py  apply_milestone32_lint_cleanup.py  apply_milestone32_provider_migration.py  apply_milestone32_runtime_safety.py  apply_milestone32_test_contract_fixes.py  apply_milestone32_worker_wiring.py  create_safe_demo_workspace.py  dependency_readiness.py  finalize_phone_lab.py  fix_controlled_lab_line_lengths.py  fix_milestone32_fake_nuclei.py  generate_total_programme_coverage.py  install_remote_nuclei_worker.sh  nuclei_readiness.py  patch_assessment_validation_ui.py  patch_controlled_lab_settings.py  patch_operational_activity_ui.py  patch_operational_assets.py  patch_validation_permissions.py  patch_validation_view_context.py  phone_lab_acceptance.py  phone_lab_target.py  project_audit.py  remote_nuclei_forced_command.py  remove_operational_browser_timer.py  repair_quality_wiring.py  run_local_preview.py  (+4 more)
(+752 files in other folders)
