[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnhunter-ai"
version = "0.1.0"
description = "Authorised laboratory-only AI-assisted vulnerability testing research platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "httpcore>=1.0.9,<1.1",
    "pydantic>=2.8,<3",
    "typer>=0.12,<1",
    "SQLAlchemy>=2.0,<3",
    "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "ruff>=0.9,<1",
]

[project.scripts]
vulnhunter = "vulnhunter.cli:app"

[tool.setuptools.packages.find]
include = ["vulnhunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
